@@ -1,3 +1,9 @@
+2007-01-31  Kai Blin  <kai.blin@gmail.com>
+	* plugins/info.py, collada_plugin/parser.py, dom.py: Output more
+	  information.
+	* plugins/sear.py: Add stubbed exporter for SearObjects.
+	* collada_plugin/generator.py: Fix missing tags.
+
 2007-01-30  Kai Blin  <kai.blin@gmail.com>
 	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
 	  the <convex_mesh>, <tri(angles|fans|strips)> and <extra> tags,
